[package]
name = "chiveroot"
version = "0.1.0"
edition = "2024"
description = "Tool to build chivebox initramfs for embedded systems"
license = "MIT"
repository = "https://github.com/pigmoral/chivebox"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
flate2 = "1"
walkdir = "2"
tempfile = "3"

[[bin]]
name = "chiveroot"
path = "src/main.rs"
